
EXTRA_DIST =	\
	theme \
	Emoticons_u.sm \
	01.png \
	02.png \
	03.png \
	04.png \
	05.png \
	06.png \
	07.png \
	08.png \
	09.png \
	10.png \
	100.png \
	101.png \
	102.png \
	103.png \
	104.png \
	105.png \
	106.png \
	107.png \
	108.png \
	109.png \
	11.png \
	110.png \
	111.png \
	112.png \
	113.png \
	114.png \
	115.png \
	116.png \
	117.png \
	118.png \
	119.png \
	12.png \
	120.png \
	121.png \
	122.png \
	123.png \
	124.png \
	125.png \
	126.png \
	127.png \
	128.png \
	129.png \
	13.png \
	130.png \
	131.png \
	132.png \
	133.png \
	134.png \
	135.png \
	136.png \
	137.png \
	138.png \
	139.png \
	14.png \
	140.png \
	141.png \
	142.png \
	143.png \
	144.png \
	145.png \
	146.png \
	147.png \
	148.png \
	149.png \
	15.png \
	150.png \
	151.png \
	152.png \
	153.png \
	154.png \
	155.png \
	156.png \
	157.png \
	158.png \
	159.png \
	16.png \
	17.png \
	18.png \
	19.png \
	20.png \
	201.gif \
	201.png \
	202.gif \
	202.png \
	203.gif \
	203.png \
	204.gif \
	204.png \
	205.gif \
	205.png \
	206.gif \
	206.png \
	21.png \
	22.png \
	23.png \
	24.png \
	25.png \
	26.png \
	27.png \
	28.png \
	29.png \
	30.png \
	31.png \
	32.png \
	33.png \
	34.png \
	35.png \
	36.png \
	37.png \
	38.png \
	39.png \
	40.png \
	41.png \
	42.png \
	43.png \
	44.png \
	45.png \
	46.png \
	47.png \
	48.png \
	49.png \
	50.png \
	51.png \
	52.png \
	53.png \
	54.png \
	55.png \
	56.png \
	57.png \
	58.png \
	59.png \
	60.png \
	61.png \
	62.png \
	63.png \
	64.png \
	65.png \
	66.png \
	67.png \
	68.png \
	69.png \
	70.png \
	71.png \
	72.png \
	73.png \
	74.png \
	75.png \
	76.png \
	77.png \
	78.png \
	79.png \
	80.png \
	81.png \
	82.png \
	83.png \
	84.png \
	85.png \
	86.png \
	87.png \
	88.png \
	89.png \
	90.png \
	91.png \
	92.png \
	93.png \
	94.png \
	95.png \
	96.png \
	97.png \
	98.png \
	99.png \
	act-up.png \
	afraid.png \
	airplane.png \
	alien.png \
	amorous.png \
	angel.png \
	angry.png \
	arrogant.png \
	at-wits-end.png \
	bad.png \
	bashful.png \
	beat-up.png \
	beauty.png \
	beer.png \
	blowkiss.png \
	bomb.png \
	bored.png \
	bowl.png \
	boy.png \
	brb.png \
	bulgy-eyes.png \
	bunny.png \
	bye.png \
	cake.png \
	call-me.png \
	camera.png \
	can.png \
	car.png \
	cat.png \
	chicken.png \
	chilli.png \
	cigarette.png \
	clap.png \
	clock.png \
	cloudy.png \
	clover.png \
	clown.png \
	coffee.png \
	coins.png \
	cold.png \
	computer.png \
	confused.png \
	console.png \
	cow.png \
	cowboy.png \
	crying.png \
	curl-lip.png \
	curse.png \
	cute.png \
	cyclops.png \
	dance.png \
	dazed.png \
	desire.png \
	devil.png \
	disappointed.png \
	disdain.png \
	doctor.png \
	dog.png \
	doh.png \
	dont-know.png \
	drink.png \
	drool.png \
	embarrassed.png \
	excited.png \
	excruciating.png \
	eyeroll.png \
	female-fighter.png \
	film.png \
	fingers-crossed.png \
	flag.png \
	foot-in-mouth.png \
	freaked-out.png \
	ghost.png \
	giggle.png \
	girl.png \
	glasses-cool.png \
	glasses-nerdy.png \
	go-away.png \
	goat.png \
	good.png \
	hammer.png \
	handcuffs.png \
	handshake.png \
	happy.png \
	highfive.png \
	hot.png \
	hug-left.png \
	hug-right.png \
	hungry.png \
	hypnotized.png \
	in_love.png \
	island.png \
	jump.png \
	kiss.png \
	kissed.png \
	kissing.png \
	knife.png \
	lamp.png \
	lashes.png \
	laugh.png \
	liquor.png \
	loser.png \
	love-over.png \
	lying.png \
	mad-tongue.png \
	mail.png \
	male-fighter1.png \
	male-fighter2.png \
	mean.png \
	meeting.png \
	messed.png \
	mobile.png \
	mohawk.png \
	moneymouth.png \
	monkey.png \
	moon.png \
	mrgreen.png \
	msn-away.png \
	msn-busy.png \
	msn.png \
	msn_online.png \
	music.png \
	musical-note.png \
	nervous.png \
	neutral.png \
	on-the-phone.png \
	party.png \
	peace.png \
	phone.png \
	pig.png \
	pill.png \
	pirate.png \
	pissed-off.png \
	pizza.png \
	plate.png \
	poop.png \
	pray.png \
	present.png \
	pumpkin.png \
	qq.png \
	question.png \
	quiet.png \
	rain.png \
	rainbow.png \
	rose-dead.png \
	rose.png \
	rotfl.png \
	sad.png \
	sarcastic.png \
	search.png \
	secret.png \
	shame.png \
	sheep.png \
	shocked.png \
	shout.png \
	shut-mouth.png \
	sick.png \
	sidefrown.png \
	silly.png \
	sinister.png \
	skeleton.png \
	skywalker.png \
	sleeping.png \
	sleepy.png \
	smirk.png \
	snail.png \
	snicker.png \
	snowman.png \
	soccerball.png \
	soldier.png \
	star.png \
	starving.png \
	stop.png \
	stressed.png \
	struggle.png \
	sun.png \
	talktohand.png \
	teeth.png \
	terror.png \
	thinking.png \
	thunder.png \
	time-out.png \
	tongue.png \
	turtle.png \
	tv.png \
	umbrella.png \
	vampire.png \
	victory.png \
	waiting.png \
	watermelon.png \
	waving.png \
	weep.png \
	wilt.png \
	wink.png \
	worship.png \
	yin-yang.png

pidginemotespixdir = $(datadir)/pixmaps/pidgin/emotes/nateon_plus
pidginemotespix_DATA = $(EXTRA_DIST)

